[package]
name = "hancoin"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["gossipsub", "mdns", "tcp", "dns", "noise", "websocket", "yamux"] }
ed25519-dalek = "1.0"
rand = "0.8"
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "1.0"
sled = "0.34"
futures = "0.3"